// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`window1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/*
@providesModule Window1
*/
module.exports = window.history;

=====================================output=====================================
/*
@providesModule Window1
*/
module.exports = window.history;

================================================================================
`;

exports[`window2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule Window2 */

module.exports = window.parent;

=====================================output=====================================
/* @providesModule Window2 */

module.exports = window.parent;

================================================================================
`;
